Fix unclosed vars

--- a/modules/openapi-generator/src/main/resources/csharp-netcore/modelGeneric.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/modelGeneric.mustache
@@ -16,6 +16,7 @@
 {{>modelInnerEnum}}
         {{/complexType}}
         {{/isEnum}}
+        {{/vars}}
         {{#vars}}
         [JsonPropertyName("{{baseName}}")]
         public {{{dataType}}} {{name}} { get; {{#isReadOnly}}private {{/isReadOnly}}set; }
