--- a/modules/openapi-generator/src/main/resources/csharp-netcore/model.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/model.mustache
@@ -3,42 +3,9 @@
 {{#models}}
 {{#model}}
 using System;
-using System.Collections;
 using System.Collections.Generic;
-using System.Collections.ObjectModel;
-using System.Linq;
-using System.IO;
-{{#vendorExtensions.x-com-visible}}
-using System.Runtime.InteropServices;
-{{/vendorExtensions.x-com-visible}}
-using System.Runtime.Serialization;
 using System.Text;
-using System.Text.RegularExpressions;
-{{#discriminator}}
-using JsonSubTypes;
-{{/discriminator}}
-{{/model}}
-{{/models}}
-{{#validatable}}
-using System.ComponentModel.DataAnnotations;
-{{/validatable}}
-using OpenAPIDateConverter = {{packageName}}.Client.OpenAPIDateConverter;
-{{#useCompareNetObjects}}
-using OpenAPIClientUtils = {{packageName}}.Client.ClientUtils;
-{{/useCompareNetObjects}}
-{{#models}}
-{{#model}}
-{{#oneOf}}
-{{#-first}}
-using System.Reflection;
-{{/-first}}
-{{/oneOf}}
-{{#anyOf}}
-{{#-first}}
-using System.Reflection;
-{{/-first}}
-{{/anyOf}}
-
+using System.Text.Json.Serialization;
 namespace {{packageName}}.{{modelPackage}}
 {
 {{#isEnum}}{{>modelEnum}}{{/isEnum}}{{^isEnum}}{{#oneOf}}{{#-first}}{{>modelOneOf}}{{/-first}}{{/oneOf}}{{#anyOf}}{{#-first}}{{>modelAnyOf}}{{/-first}}{{/anyOf}}{{^oneOf}}{{^anyOf}}{{>modelGeneric}}{{/anyOf}}{{/oneOf}}{{/isEnum}}
