--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/model.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/model.mustache
@@ -5,29 +5,13 @@
 
 {{/nrt}}
 using System;
-using System.Collections;
 using System.Collections.Generic;
-using System.Collections.ObjectModel;
-using System.Linq;
-using System.IO;
-{{^useGenericHost}}
-using System.Runtime.Serialization;
-{{/useGenericHost}}
 using System.Text;
-using System.Text.RegularExpressions;
-using System.Text.Json;
 using System.Text.Json.Serialization;
-{{#validatable}}
-using System.ComponentModel.DataAnnotations;
-{{/validatable}}
-{{#useCompareNetObjects}}
-using OpenAPIClientUtils = {{packageName}}.Client.ClientUtils;
-{{/useCompareNetObjects}}
 {{#models}}
 {{#model}}
 
-namespace {{packageName}}.{{modelPackage}}
-{
+namespace {{packageName}}.{{modelPackage}};
 {{#isEnum}}
 {{>modelEnum}}
 {{/isEnum}}
@@ -38,4 +22,4 @@ namespace {{packageName}}.{{modelPackage}}
 {{/isEnum}}
 {{/model}}
 {{/models}}
-}
+
