--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/httpclient/model.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/httpclient/model.mustache
@@ -6,9 +6,8 @@ using System;
 using System.Collections.Generic;
 using System.Text;
 using System.Text.Json.Serialization;
-namespace {{packageName}}.{{modelPackage}}
-{
+namespace {{packageName}}.{{modelPackage}};
 {{#isEnum}}{{>modelEnum}}{{/isEnum}}{{^isEnum}}{{#oneOf}}{{#-first}}{{>modelOneOf}}{{/-first}}{{/oneOf}}{{#anyOf}}{{#-first}}{{>modelAnyOf}}{{/-first}}{{/anyOf}}{{^oneOf}}{{^anyOf}}{{>modelGeneric}}{{/anyOf}}{{/oneOf}}{{/isEnum}}
 {{/model}}
 {{/models}}
-}
+
