--- a/modules/openapi-generator/src/main/resources/csharp-netcore/modelEnum.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/modelEnum.mustache
@@ -4,23 +4,6 @@
     {{#description}}
     /// <value>{{.}}</value>
     {{/description}}
-    {{#vendorExtensions.x-cls-compliant}}
-    [CLSCompliant({{{.}}})]
-    {{/vendorExtensions.x-cls-compliant}}
-    {{#vendorExtensions.x-com-visible}}
-    [ComVisible({{{.}}})]
-    {{/vendorExtensions.x-com-visible}}
-    {{#allowableValues}}
-    {{#enumVars}}
-    {{#-first}}
-    {{#isString}}
-    {{^useGenericHost}}
-    [JsonConverter(typeof(StringEnumConverter))]
-    {{/useGenericHost}}
-    {{/isString}}
-    {{/-first}}
-    {{/enumVars}}
-    {{/allowableValues}}
     {{>visibility}} enum {{datatypeWithEnum}}{{^datatypeWithEnum}}{{classname}}{{/datatypeWithEnum}}{{#vendorExtensions.x-enum-byte}}: byte{{/vendorExtensions.x-enum-byte}}
     {
         {{#allowableValues}}
@@ -31,7 +14,7 @@
         {{#isString}}
         {{^useGenericHost}}
         {{! EnumMember not currently supported in System.Text.Json, use a converter instead }}
-        [EnumMember(Value = "{{{value}}}")]
+        [JsonStringEnumValue("{{{value}}}")]
         {{/useGenericHost}}
         {{/isString}}
         {{name}} = {{^isString}}{{{value}}}{{/isString}}{{#isString}}{{-index}}{{/isString}}{{^-last}},{{/-last}}
