--- a/modules/openapi-generator/src/main/resources/csharp-netcore/ClientUtils.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/ClientUtils.mustache
@@ -126,7 +126,7 @@ namespace {{packageName}}.Client
         /// <returns>Serialized string.</returns>
         public static string Serialize(object obj)
         {
-            return obj != null ? Newtonsoft.Json.JsonConvert.SerializeObject(obj) : null;
+            return obj != null ? JsonSerializer.SerializeObject(obj) : null;
         }
 
         /// <summary>
