--- a/modules/openapi-generator/src/main/resources/csharp-netcore/auth/TokenResponse.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/auth/TokenResponse.mustache
@@ -1,14 +1,12 @@
 {{>partial_header}}
 
-using Newtonsoft.Json;
-
 namespace {{packageName}}.Client.Auth
 {
     class TokenResponse
     {
-        [JsonProperty("token_type")]
+        [JsonPropertyName("token_type")]
         public string TokenType { get; set; }
-        [JsonProperty("access_token")]
+        [JsonPropertyName("access_token")]
         public string AccessToken { get; set; }
     }
 }
