--- a/modules/openapi-generator/src/main/resources/csharp-netcore/AbstractOpenAPISchema.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/AbstractOpenAPISchema.mustache
@@ -1,6 +1,8 @@
 {{>partial_header}}
 
 using System;
+using System.Text.Json;
+using System.Text.Json.Serialization;
 
 namespace {{packageName}}.{{modelPackage}}
 {
@@ -12,7 +14,7 @@ namespace {{packageName}}.{{modelPackage}}
         /// <summary>
         ///  Custom JSON serializer
         /// </summary>
-        static public readonly SerializerOptions SerializerOptions = new JsonSerializerOptions _serializerOptions = new JsonSerializerOptions
+        static public readonly JsonSerializerOptions JsonSerializerOptions = new JsonSerializerOptions
         {
             DefaultIgnoreCondition = JsonIgnoreCondition.WhenWritingNull
         };
