--- a/modules/openapi-generator/src/main/resources/csharp-netcore/modelOneOf.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/modelOneOf.mustache
@@ -146,7 +146,7 @@
 
             try
             {
-                // if it does not contains "AdditionalProperties", use SerializerSettings to deserialize
+                // if it does not contains "AdditionalProperties", use JsonSerializerOptions to deserialize
                 if (typeof({{{.}}}).GetProperty("AdditionalProperties") == null)
                 {
                     new{{classname}} = new {{classname}}(JsonConvert.DeserializeObject<{{{.}}}>(jsonString, {{classname}}.SerializerSettings));
